gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/fail11355.d
version https://git-lfs.github.com/spec/v1
oid sha256:0a03cd79efb0a00e6d9c2c3addc3b86fa6059dc391b82dc3c479016d422ee94e
size 375
